Fix spacing for dynamic text

--- a/src/styles/_ShoppingBag.scss
+++ b/src/styles/_ShoppingBag.scss
@@ -20,8 +20,8 @@
 .item {
   background-color: v.$ternary-background-color;
   display: flex;
-  padding: 5px;
-  justify-content: space-between;
+  padding: 8px;
+  margin: 5px 0;
 }
 
 .item__title {
@@ -30,24 +30,32 @@
 
 .item__img {
   height: 50px;
-  // margin: 5px;
+}
+
+.item__info {
+  width: 100%;
+  margin-left: 1rem;
 }
 
 .item__details {
   display: flex;
   justify-content: space-evenly;
   align-items: flex-end;
-  font-size: 10px
+  font-size: 10px;
+}
+
+.item__detail {
+  width: 100%;
 }
 
 .item__spec {
   margin: 0;
 }
 
-.counter {
+.item__counter {
   display: flex;
   align-items: center;
-  margin: 0 2rem;
+  margin-left: 3rem;
 }
 
 .counter__icon {
@@ -76,6 +84,7 @@
 .bag__subtotal {
   display: flex;
   justify-content: space-between;
+  font-weight: 600;
 }
 
 .bag__button {
