--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -18,8 +18,8 @@
 .item {
   background-color: #FFFFFF;
   display: flex;
-  padding: 5px;
-  justify-content: space-between;
+  padding: 8px;
+  margin: 5px 0;
 }
 
 .item__title {
@@ -30,6 +30,11 @@
   height: 50px;
 }
 
+.item__info {
+  width: 100%;
+  margin-left: 1rem;
+}
+
 .item__details {
   display: flex;
   justify-content: space-evenly;
@@ -37,14 +42,18 @@
   font-size: 10px;
 }
 
+.item__detail {
+  width: 100%;
+}
+
 .item__spec {
   margin: 0;
 }
 
-.counter {
+.item__counter {
   display: flex;
   align-items: center;
-  margin: 0 2rem;
+  margin-left: 3rem;
 }
 
 .counter__icon {
@@ -73,6 +82,7 @@
 .bag__subtotal {
   display: flex;
   justify-content: space-between;
+  font-weight: 600;
 }
 
 .bag__button {
